--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mkpr",
-  "version": "0.0.0-semantic-release",
+  "version": "2.1.128",
   "publishConfig": {
     "access": "public"
   },
@@ -29,14 +29,14 @@
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m tests/*.mjs && c8 report -r lcov -o build/coverage --temp-directory build/tmp"
   },
   "dependencies": {
-    "aggregation-repository-provider": "^5.0.2",
+    "aggregation-repository-provider": "^5.0.3",
     "bitbucket-repository-provider": "^4.1.2",
     "commander": "^9.2.0",
     "content-entry": "^5.0.0",
     "execa": "^6.1.0",
     "fast-json-patch": "^3.0.0-1",
-    "gitea-repository-provider": "^2.1.25",
-    "github-repository-provider": "^7.26.15",
+    "gitea-repository-provider": "^2.1.26",
+    "github-repository-provider": "^7.26.16",
     "local-repository-provider": "^8.0.3"
   },
   "devDependencies": {
