--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "bitbucket-repository-provider": "^4.2.9",
     "commander": "^9.3.0",
     "content-entry": "^5.0.6",
+    "etag-cache-leveldb": "^1.1.0",
     "execa": "^6.1.0",
     "fast-json-patch": "^3.0.0-1",
     "gitea-repository-provider": "^2.2.9",
     "github-repository-provider": "^7.30.10",
+    "leveldown": "^6.1.1",
+    "levelup": "^5.1.1",
     "local-repository-provider": "^8.0.12"
   },
   "devDependencies": {
