--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "aggregation-repository-provider": "^5.3.8",
     "bitbucket-repository-provider": "^4.4.16",
+    "chalk": "^5.2.0",
     "commander": "^9.4.1",
     "content-entry": "^5.2.15",
     "etag-cache-leveldb": "^1.4.0",
