--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/arlac77/mkpr.git"
+    "url": "https://github.com/arlac77/mkpr"
   },
   "bugs": {
     "url": "https://github.com/arlac77/mkpr/issues"
