--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "github-repository-provider": "^8.0.5",
     "leveldown": "^6.1.1",
     "levelup": "^5.1.1",
-    "local-repository-provider": "^8.1.12",
-    "node-fetch": "^3.3.0"
+    "local-repository-provider": "^8.1.12"
   },
   "devDependencies": {
     "ava": "^5.2.0",
@@ -49,7 +48,7 @@
     "semantic-release": "^20.1.1"
   },
   "engines": {
-    "node": ">=18.14.2"
+    "node": ">=18.15.0"
   },
   "repository": {
     "type": "git",
